scroll > auto to avoid perma scrollbar

--- a/src/X-rayHTML.css
+++ b/src/X-rayHTML.css
@@ -79,7 +79,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 .method-flip .snippet {
